<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TruckRcActivity!</string>
    <string name="app_name">Truck RC</string>
    <string name="buttonQuit">Quit</string>
    <string name="buttonUp">Accelerate</string>
    <string name="buttonConnect">Connect</string>
    <string name="buttonLeft">Left</string>
    <string name="buttonDown">Backwards</string>
    <string name="buttonRight">Right</string>
</resources>
